--- a/home/static/home/css/sections.css
+++ b/home/static/home/css/sections.css
@@ -146,6 +146,7 @@ h3.title {
 .view-all-container {
     background-color: var(--fifth-color);
     border-radius: 20px;
+    color: var(--background-color);
     height: 10vh;
 }
 
