--- a/home/static/home/css/dashboard.css
+++ b/home/static/home/css/dashboard.css
@@ -358,6 +358,7 @@ a:focus {
 .action-container {
     border-radius: 10px;
     padding: 5px;
+    color: var(--dark-text-color);
     font-family: 'Muli', sans-serif;
 }
 
